syntax = "proto3";

package log.v1;

option go_package = "github.com/innazh/api/log_v1";

service Log {
    rpc Produce(ProduceRequest) returns (ProduceResponse) {}
    rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
    rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {} //server-side stream sent back to client
    rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {} //bidirectional steraming: both client and server send a seq. of msgs
    rpc GetServers(GetServersRequest) returns (GetServersResponse) {} //this is the endpoint resolvers will call to get clister's servers
}

message Record {
    bytes value = 1;
    uint64 offset = 2;
    uint64 term = 3;
    uint32 type = 4;
}

message ProduceRequest{
    Record record = 1;
}

message ProduceResponse{
    uint64 offset = 1; //this is essentially record's id
}

message ConsumeRequest{
    uint64 offset =1;
}

message ConsumeResponse{
    Record record = 2;
}

// Server contains the information of an address to clients can connect to, and if its a leader. 
// We redirect produce calls to the leaders and consume calls to the followers.
message Server {
    string id = 1;
    string rpc_addr = 2;
    bool is_leader = 3;
}

message GetServersRequest{}

message GetServersResponse {
    repeated Server servers = 1;
}